compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case18.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 629
expression: "case 1 { x if x == \"x\" -> 1 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:15
  │
1 │ case 1 { x if x == "x" -> 1 }
  │               ^^^^^^^^

Expected type:

    Int

Found type:

    String


